added the forget password system but testing pending

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -130,6 +130,8 @@
                       </div>
                       <div class="mt-2">
                         Show Password <input type="checkbox" onclick="showPassword()">
+                        <a href="{% url 'request_password_reset' %}" class="text-sm font-weight-bold float-end">Forgot
+                          password?</a>
                       </div>
 
                     </div>
