--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -53,6 +53,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'about' %}">About</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'our_team' %}">Out Team</a>
+                    </li>
                      <!--  <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li> -->
@@ -109,7 +113,7 @@
                     <div class="col-xl-4 col-lg-4 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="{% static 'img/home/angaari_logo.png' %}"
+                                <a href="https://theangaarbatch.in/"><img src="{% static 'img/home/angaari_logo.png' %}"
                                         class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
