--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -11,9 +11,9 @@
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🔥</text></svg>">
 
     <title>
-    {% block title %}
-    {% endblock %}
-</title>
+        {% block title %}
+        {% endblock %}
+    </title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
@@ -46,7 +46,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
@@ -55,9 +55,9 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'our_team' %}">Out Team</a>
+                        <a class="nav-link" href="{% url 'our_team' %}">Our Team</a>
                     </li>
-                     <!--  <li class="nav-item">
+                    <!--  <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li> -->
                 </ul>
@@ -113,7 +113,7 @@
                     <div class="col-xl-4 col-lg-4 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="https://theangaarbatch.in/"><img src="{% static 'img/home/angaari_logo.png' %}"
+                                <a href="https://theangaarbatch.in/"><img src="{% static 'img/home/angaar_logo.jpg' %}"
                                         class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
