--- a/templates/accounts/reset_password_email.html
+++ b/templates/accounts/reset_password_email.html
@@ -67,7 +67,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://theangaarbatch.in/static/img/home/angaari_logo.png" alt="Angaar Logo">
+            <img src="https://theangaarbatch.in/static/img/home/angaari_logo.png">
             <h1>🔥The Angaar Batch🔥 <br>Reset Password</h1>
         </div>
         <div class="content">
