--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#">
+            <a class="navbar-brand text-white" href="/">
                 <!-- <img src="demo_static/img/home/angaar_logo-2.png" alt="The Angaar Batch" width="50" height="40" class="d-inline-block align-text-top"> -->
                 The Angaar Batch🔥
             </a>
