--- a/templates/accounts/request_password_reset.html
+++ b/templates/accounts/request_password_reset.html
@@ -6,7 +6,8 @@
 <link rel="stylesheet" href="{% static 'css/home/css/index.css' %}">
 <style>
     body {
-        background: linear-gradient(135deg, #1A1A1A, #0E0E0E);
+        background: url("{% static 'img/accounts/background.png' %}") no-repeat center center fixed;
+        background-size: cover;
     }
 
     .reset-container {
@@ -73,12 +74,22 @@
         height: 100vh;
         margin-bottom: -5%;
     }
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: -1;
+    }
+    
 </style>
 {% endblock %}
 
 {% block body %}
 
-
+<div class="overlay"></div>
 <div class="d-flex justify-content-center align-items-center" id="main-container">
     <div class="reset-container">
 
