added the specific course enrollment system with ajax

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,7 +1,9 @@
 {% extends 'home/base.html' %}
 {% load static %}
 
-{% block title %}Login - Angaar{% endblock %}
+{% block title %}
+#AngaarHai | Login🔥
+{% endblock %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/accounts/login.css' %}">
@@ -47,7 +49,7 @@
       </div>
       <!-- add the forget password link -->
       <div class="text-end mb-3">
-        <a href="{% url 'request_password_reset' %}" class="a-link">Forget Password?</a>
+        <a href="{% url 'request_password_reset' %}" class="a-link">Forgot Password?</a>
       </div>
 
       <div class="text-center">
