--- a/templates/accounts/request_password_reset.html
+++ b/templates/accounts/request_password_reset.html
@@ -1,6 +1,8 @@
 {% extends 'home/base.html' %}
 {% load static %}
-{% block title %}Reset Password - Angaari Theme{% endblock %}
+{% block title %}
+#AngaarHai | Reset Password
+{% endblock %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/home/css/index.css' %}">
@@ -74,6 +76,7 @@
         height: 100vh;
         margin-bottom: -5%;
     }
+
     .overlay {
         position: absolute;
         top: 0;
@@ -83,7 +86,6 @@
         background-color: rgba(0, 0, 0, 0.7);
         z-index: -1;
     }
-    
 </style>
 {% endblock %}
 
@@ -109,7 +111,7 @@
         </div>
 
         <h1 class="reset-header text-center">Reset Your Password</h1>
-        <p class="reset-text text-center">Enter your email address to reset your password.</p>
+        <p class="reset-text text-center">We'll send a reset link on your registered Email Id.</p>
         <form method="POST" onsubmit="disableButton()">
             {% csrf_token %}
             <div class="mb-3">
