--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -1,6 +1,9 @@
 {% extends 'home/base.html' %}
 {% load static %}
-{% block title %}Reset Password - Angaari Theme{% endblock %}
+
+{% block title %}
+# AngaarHai | Set New Password
+{% endblock %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/home/css/index.css' %}">
