--- a/templates/administration/batch/batch.html
+++ b/templates/administration/batch/batch.html
@@ -173,6 +173,9 @@ active
         <div class="">
             <a href="{% url 'administrator_set_pod_for_batch' batch.slug %}"
                 class="btn btn-outline-primary button mt-n3 m-3 w-25">Set POD</a>
+            
+                <a href="{% url 'administrator_batch_enrollment_requests' batch.slug %}"
+                class="btn btn-outline-warning button mt-n3 m-3 w-25">Enrollment Requests</a>
         </div>
     </div>
 
